=encoding UTF-8

=head1 NAME

Changes - Revision history for Games-FrozenBubble

=head2 2.21	2010-07-09

=over

=item Clean up of most visual effects (FROGGS, kthakore)

=item Game and net play working in windows (FROGGS,kthakore)

=item Fixed Build for MacOSX

=item Cleaned up adherence to old version 

=back 


=head2 2.201	2010-05-02

=over

=item Migrated to new SDL bindings (kthakore, FROGGS)

=item Made Makefile and Build system cpan friendly (daxim++, kmx++)

=item Fixed bugs due to change in typemap (FROGGS++)

=back


=head2 2.2.0  2008-12-06

=over

=item more options (L<http://www.frozen-bubble.org/data/fb2.2-more-options.png>)
in LAN/NET games (continue game when players leave; disable player targetting)

=item fixed abort during a multiplayer game with a player in lowest graphics mode

=item much faster Internet servers listing (parallel discovery)

=item add ability to record and replay games; also add ability to save frames
from records, so as to create high quality videos of games (on youtube
L<http://www.youtube.com/watch?v=4AxSIkM77Ow>, video file
L<http://www.frozen-bubble.org/data/odie-gc-chain-reactions-craze.avi>)

=item geolocalized nicks in server lounge
(L<http://www.frozen-bubble.org/data/fb2.2-geolocalized-nicks.png>)

=back


=head2 2.1.0  2006-11-23

=over

=item most aborts during a multiplayer game fixed (there are some infrequent
remaining ones, unfortunately)

=item 1-player multiplayer training: ability to activate chain reaction
(L<http://www.frozen-bubble.org/data/fb2.1-1p-mptraining-cr.png>)

=item world map: you can view the amount of playing players
(L<http://www.frozen-bubble.org/data/fb2.1-playingplayers.png>), which helps
choosing a server

=item world map: you see playing players as green dots
(L<http://www.frozen-bubble.org/data/fb2.1-playingdots.png>)

=item network game lounge: you can toggle fullscreen
(L<http://www.frozen-bubble.org/data/fb2.1-fs.png>)
